# todomanager

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.devcontainer/: devcontainer.json
todos/: settings.py  urls.py
todosapp/: admin.py  auth_views.py  models.py  tests.py  urls.py  views.py
todosapp/templates/todosapp/: detail.html  index.html  login.html  signup.html
vite-project/: index.html  jest.config.js  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
vite-project/src/: App.css  App.tsx  index.css  setupTests.ts
vite-project/src/__tests__/: App.integration.test.tsx  App.test.tsx
vite-project/src/types/: jest-dom.d.ts
vite-project/src/utils/: todoUtils.ts
