[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todomanager"
version = "0.1.0"
description = "A full stack to-do list application using Django and React"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Donovan Preston"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.2",
]


[project.urls]
Homepage = "https://github.com/fzzzy/todoman"
Repository = "https://github.com/fzzzy/todoman.git"
Issues = "https://github.com/fzzzy/todoman/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["todoman*"]
